cambios agregamos nuevas palabras

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        Hola estudiante esta es mi web, sigueme GAAAA
+        Hola estudiante chibolin esta es mi web, sigueme GAAAA
     </p>
 </body>
 </html>
